crates/ic-lint/tests/snapshots/exhaustive_union_default__multiple_labels_per_case.snap
---
source: crates/ic-lint/tests/exhaustive_union_default.rs
expression: test_lint_hir(source)
---
⨯ exhaustive-union-default: default case is not allowed when all enum values are covered in union `ResultData`
  @ test.idl:8:1

  6 │ };
  7 │ 
  8 │ union ResultData switch(Result) {
    │ ˆˆˆˆˆˆˆˆˆˆˆˆˆˆˆˆˆˆˆˆˆˆˆˆˆˆˆˆˆˆˆˆˆ exhausted all possible values
  9 │ case SUCCESS:
 10 │ case PENDING:
 11 │     string message;
 12 │ case FAILURE:
 13 │     long error_code;
 14 │ default:
 15 │     double data;  // Error: all enum values covered
 16 │ };
    │ ˆˆ

  ? all 3 enumerators of 'Result' are already handled by explicit cases
  * default cases are only allowed when some discriminator values are not explicitly handled
